Homework/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plans_Discussed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Plans Discussed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_Value__c</fullName>
        <label>Potential Value</label>
        <summarizedField>Opportunity.ExpectedRevenue</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum_of_Opportunities__c</fullName>
        <label>Sum of Opportunities</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Support_Tier__c</fullName>
        <defaultValue>$CustomMetadata.Support_Tier__mdt.Bronze.MasterLabel</defaultValue>
        <label>Support Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Spending__c</fullName>
        <label>Total Spending</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Updated_By_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated By Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Updated_By_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated By Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Number_8_Characters</fullName>
        <active>false</active>
        <errorConditionFormula>LEN( AccountNumber) != 8</errorConditionFormula>
        <errorMessage>Account number must be 8 characters long.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Minimum_Spending_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
 (ISPICKVAL( Support_Tier__c , &quot;Silver&quot;) 
      &amp;&amp; 
   ( Total_Spending__c &lt;  
   $CustomMetadata.Support_Tier__mdt.Silver.Minimum_Spending__c 
   )
 ) 
      || 
 (ISPICKVAL( Support_Tier__c , &quot;Gold&quot;) 
      &amp;&amp; 
   ( Total_Spending__c &lt;  
   $CustomMetadata.Support_Tier__mdt.Gold.Minimum_Spending__c 
   )
 ), TRUE, FALSE
)</errorConditionFormula>
        <errorMessage>Dollar value too low for this support tier</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Revenue_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>$CustomMetadata.Support_Tier__mdt.Gold.Minimum_Spending__c  * 20 &gt;  AnnualRevenue</errorConditionFormula>
        <errorMessage>Too few Annual Revenue</errorMessage>
    </validationRules>
</CustomObject>